2007-10-10  Ulrich Drepper  <drepper@redhat.com>

	* locales/iso14651_t1_common: If DIACRIT_FORWARD is defined, define
	second level of <LATIN> script as forward.
	* locales/de_DE: Define DIACRIT_FORWARD.
	* de_DE.in: Revert last change.

2007-10-10  Jakub Jelinek  <jakub@redhat.com>

	* locales/en_US: Add first_weekday and first_workday.
	* locales/cs_CZ: Likewise.
	* locales/fur_IT: Likewise.
	* locales/fy_DE: Likewise.
	* locales/hu_HU: Likewise.
	* locales/i18n: Likewise.
	* locales/li_BE: Likewise.
	* locales/li_NL: Likewise.
	* locales/nds_DE: Likewise.
	* locales/nds_NL: Likewise.
	* locales/pl_PL: Likewise.
	* locales/sc_IT: Likewise.
	* locales/sk_SK: Likewise.

2007-10-09  Ulrich Drepper  <drepper@redhat.com>

	* locales/de_DE: Set first week day to Monday.
	* locales/fr_FR: Likewise.

2007-10-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #73]
	* locales/nb_NO: Update time information, collation, thousands
	separator.
	* locales/nn_NO: Likewise.

2007-10-04  Ulrich Drepper  <drepper@redhat.com>

	* locales/en_NG: New file.

2007-10-04  Jakub Jelinek  <jakub@redhat.com>

	* tst-langinfo.sh: Update expected THOUSEP for fr_FR.

2007-10-02  Ulrich Drepper  <drepper@redhat.com>

	* charmaps/UTF-8: Fix U06FF definition.  Remove double U074A
	definition.  Add U0B71 and U27C0 to U27CA definitions.

	* de_DE.in: Adjust for correct handling of backward direction sorting.

	* fr_FR.in: New file.
	* Makefile: Add rules to run fr_FR sorting test.

2007-10-01  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4941]
	* locales/oc_FR: Fix Thursday abday and August mon and abmon data.

	* SUPPORTED (SUPPORTED-LOCALES): Add ber_MA.UTF-8.

	* locales/am_ET (LC_COLLATE): Define new script after copy.

2007-09-30  Ulrich Drepper  <drepper@redhat.com>

	* locales/cs_SR: Removed.

	* locales/lo_LA: Add missing collating element o-e.

	* locales/is_IS: Cleanup.  Remove invalid collation entries.
	* locales/lv_LV: Likewise.

	* locales/fa_IR: Add missing collating element Alef-Hamza.
