@@ -2150,13 +2150,17 @@ grouping                  0;0
 END LC_NUMERIC
 
 LC_TIME
-abday   "<U004E>";/
-        "<U0050><U006E>";/
-        "<U0057><U0074>";/
-        "<U015A><U0072>";/
-        "<U0043><U007A>";/
-        "<U0050><U0074>";/
-        "<U0053><U006F>"
+% The abday, abmon, and d_fmt information has been changed (back) to match
+% the preference expressed in the poll organized to get some concensus.
+% The results were not entirely clear on all easpects but the choices
+% here seem to have the most support.  For more details:
+%
+%   https://bugzilla.redhat.com/show_bug.cgi?id=242296
+%
+abday   "<U006E><U0069><U0065>";"<U0070><U006F><U006E>";/
+        "<U0077><U0074><U006F>";"<U015B><U0072><U006F>";/
+        "<U0063><U007A><U0077>";"<U0070><U0069><U0105>";/
+        "<U0073><U006F><U0062>"
 day     "<U006E><U0069><U0065><U0064><U007A><U0069><U0065><U006C><U0061>";/
         "<U0070><U006F><U006E><U0069><U0065><U0064><U007A><U0069><U0061><U0142><U0065><U006B>";/
         "<U0077><U0074><U006F><U0072><U0065><U006B>";/
@@ -2164,18 +2168,12 @@ day     "<U006E><U0069><U0065><U0064><U007A><U0069><U0065><U006C><U0061>";/
         "<U0063><U007A><U0077><U0061><U0072><U0074><U0065><U006B>";/
         "<U0070><U0069><U0105><U0074><U0065><U006B>";/
         "<U0073><U006F><U0062><U006F><U0074><U0061>"
-abmon   "<U0049>";/
-        "<U0049><U0049>";/
-        "<U0049><U0049><U0049>";/
-        "<U0049><U0056>";/
-        "<U0056>";/
-        "<U0056><U0049>";/
-        "<U0056><U0049><U0049>";/
-        "<U0056><U0049><U0049><U0049>";/
-        "<U0049><U0058>";/
-        "<U0058>";/
-        "<U0058><U0049>";/
-        "<U0058><U0049><U0049>"
+abmon   "<U0073><U0074><U0079>";"<U006C><U0075><U0074>";/
+        "<U006D><U0061><U0072>";"<U006B><U0077><U0069>";/
+        "<U006D><U0061><U006A>";"<U0063><U007A><U0065>";/
+        "<U006C><U0069><U0070>";"<U0073><U0069><U0065>";/
+        "<U0077><U0072><U007A>";"<U0070><U0061><U017A>";/
+        "<U006C><U0069><U0073>";"<U0067><U0072><U0075>"
 mon     "<U0073><U0074><U0079><U0063><U007A><U0065><U0144>";/
         "<U006C><U0075><U0074><U0079>";/
         "<U006D><U0061><U0072><U007A><U0065><U0063>";/
@@ -2191,7 +2189,7 @@ mon     "<U0073><U0074><U0079><U0063><U007A><U0065><U0144>";/
 d_t_fmt "<U0025><U0061><U002C><U0020>/
 <U0025><U002D><U0064><U0020><U0025><U0062><U0020><U0025><U0059><U002C><U0020>/
 <U0025><U0054>"
-d_fmt   "<U0025><U002D><U0064><U0020><U0025><U0062><U0020><U0025><U0059>"
+d_fmt   "<U0025><U0064><U002E><U0025><U006D><U002E><U0025><U0059>"
 t_fmt   "<U0025><U0054>"
 am_pm   "";""
 t_fmt_ampm ""
